--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@types/react-redux": "^7.1.7",
+    "axios": "^0.19.2",
     "dotenv": "^8.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
@@ -18,7 +20,11 @@
     "next": "^9.1.1",
     "next-cookies": "^1.1.3",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.3",
@@ -27,6 +33,7 @@
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/redux-saga": "^0.10.5",
     "babel-plugin-styled-components": "latest",
     "typescript": "3.6.3"
   },
